website/versioned_docs/version-2.0.x/reference/subsystems/protoc.mdx
---
title: protoc
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The protocol buffer compiler (https://developers.google.com/protocol-buffers).

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[protoc]`</span>

<span className={styles.options}>

## Basic options

None

## Advanced options

### `version`

<Option
  cli_repr={`--protoc-version=<str>`}
  env_repr="PANTS_PROTOC_VERSION"
  default_repr={`3.11.4`}
>
  Use this version of protoc.
</Option>

### `known_versions`

<Option
  cli_repr={`--protoc-known-versions="['<str>', '<str>', ...]"`}
  env_repr='PANTS_PROTOC_KNOWN_VERSIONS'
  default_repr={`[\n  "3.11.4|darwin|8c6af11e1058efe953830ecb38324c0e0fd2fb67df3891896d138c535932e7db|2482119",\n  "3.11.4|linux |6d0f18cd84b918c7b3edd0203e75569e0c8caecb1367bbbe409b45e28514f5be|1591191"\n]`}
>

Known versions to verify downloads against.

Each element is a pipe-separated string of `version|platform|sha256|length`, where:

- `version` is the version string
- `platform` is one of [darwin,linux],
- `sha256` is the 64-character hex representation of the expected sha256

```
digest of the download file, as emitted by `shasum -a 256`
```

- `length` is the expected length of the download file in bytes

E.g., `3.1.2|darwin|6d0f18cd84b918c7b3edd0203e75569e0c7caecb1367bbbe409b44e28514f5be|42813`.

Values are space-stripped, so pipes can be indented for readability if necessary.

</Option>

### `url_template`

<Option
  cli_repr={`--protoc-url-template=<str>`}
  env_repr="PANTS_PROTOC_URL_TEMPLATE"
  default_repr={`https://github.com/protocolbuffers/protobuf/releases/download/v{version}/protoc-{version}-{platform}-x86_64.zip`}
>
  URL to download the tool, either as a single binary file or a compressed file
  (e.g. zip file). You can change this to point to your own hosted file, e.g. to
  work with proxies. Use `{version}` to have the value from --version
  substituted, and `{platform}` to have a value from --url-platform-mapping
  substituted in, depending on the current platform. For example,
  https://github.com/.../protoc-&#123;version&#125;-&#123;platform&#125;.zip.
</Option>

### `url_platform_mapping`

<Option
  cli_repr={`--protoc-url-platform-mapping="{'key1': val1, 'key2': val2, ...}"`}
  env_repr='PANTS_PROTOC_URL_PLATFORM_MAPPING'
  default_repr={`{\n  "darwin": "osx",\n  "linux": "linux"\n}`}
>
A dictionary mapping platforms to strings to be used when generating the URL to download the tool. In --url-template, anytime the `{platform}` string is used, Pants will determine the current platform, and substitute `{platform}` with the respective value from your dictionary. For example, if you define `{"darwin": "apple-darwin", "linux": "unknown-linux"}, and run Pants on Linux, then `&#123;platform&#125;` will be substituted in the --url-template option with unknown-linux.
</Option>

## Deprecated options

### `runtime_targets`

<Option
  cli_repr={`--protoc-runtime-targets="[<target_option>, <target_option>, ...]"`}
  env_repr="PANTS_PROTOC_RUNTIME_TARGETS"
  default_repr={`[]`}
  removal_version="2.1.0.dev0"
  removal_hint={
    "Use the option `runtime_dependencies` in the new `[python-protobuf]` scope, which behaves identically."
  }
>
  A list of addresses to targets for Protobuf runtime libraries. For example, a
  `python_requirement_library` for the `protobuf` Python library. These targets
  will be automatically injected into the `dependencies` field of every
  `protobuf_library`.
</Option>

</span>

